--- a/www/css/style.css
+++ b/www/css/style.css
@@ -71,10 +71,10 @@ header .bot .bot-r a img { max-width: 100%; max-height: 100%; }
 .did { display: inline-block; }
 
 footer { width: 100%; height: 126px; margin-top: -151px; padding-top: 25px; background: #f1e7d7 url('/images/tex.png') center; position: relative; overflow: hidden; }
-footer .bot { display: table; }
+footer .bot { display: table; width: 100%; height: 100px; }
 footer .logo, footer .dev { display: table-cell; vertical-align: middle; }
-footer .logo { width: 53.17%; height: 100px; max-width: 670px;  }
-footer .logo img { width: 100%;  vertical-align: middle; max-width: 560px; }
+footer .logo { width: 53.17%; height: 64px; max-width: 670px;  }
+footer .logo img { vertical-align: middle; max-width: 300px; height: 64px; }
 footer .dev { width: 35.86%; padding-left: 20%; text-align: right; }
 footer .dev img { max-width: 161px; width: 100%; vertical-align: middle; }
 
